# batrpc

./: .gitignore  Makefile  README.md  batrpc-otel.opam  batrpc.opam  batrpc.opam.template  dune  dune-project  index.html
.github/workflows/: gh-pages.yml  main.yml
batrpc/: index.html
batrpc-otel/: index.html
batrpc-otel/Batrpc_otel/: index.html
batrpc-otel/Batrpc_otel/Server/: index.html
batrpc-otel/_doc-dir/: README.md
batrpc/Batrpc/: index.html
batrpc/Batrpc_client/: index.html
batrpc/Batrpc_client/Client/: index.html
batrpc/Batrpc_client/Config/: index.html
batrpc/Batrpc_client/Middleware/: index.html
batrpc/Batrpc_client/State/: index.html
batrpc/Batrpc_client__/: index.html
batrpc/Batrpc_client__Client/: index.html
batrpc/Batrpc_client__Config/: index.html
batrpc/Batrpc_client__Lifecycle/: index.html
batrpc/Batrpc_client__Middleware/: index.html
batrpc/Batrpc_client__State/: index.html
batrpc/Batrpc_core/: index.html
batrpc/Batrpc_core/Basic_client/: index.html
batrpc/Batrpc_core/Buf_pool/: index.html
batrpc/Batrpc_core/Client_state/: index.html
batrpc/Batrpc_core/Encoding/: index.html
batrpc/Batrpc_core/Error/: index.html
batrpc/Batrpc_core/Error_kind/: index.html
batrpc/Batrpc_core/Errors/: index.html
batrpc/Batrpc_core/Framing/: index.html
batrpc/Batrpc_core/Handler/: index.html
batrpc/Batrpc_core/Int32_tbl/: index.html
batrpc/Batrpc_core__/: index.html
batrpc/Batrpc_core__Basic_client/: index.html
batrpc/Batrpc_core__Buf_pool/: index.html
batrpc/Batrpc_core__Client_state/: index.html
batrpc/Batrpc_core__Common_/: index.html
batrpc/Batrpc_core__Encoding/: index.html
batrpc/Batrpc_core__Error/: index.html
batrpc/Batrpc_core__Error_kind/: index.html
batrpc/Batrpc_core__Errors/: index.html
batrpc/Batrpc_core__Framing/: index.html
batrpc/Batrpc_core__Handler/: index.html
batrpc/Batrpc_core__Io/: index.html
batrpc/Batrpc_core__Meta/: index.html
batrpc/Batrpc_core__Middleware/: index.html
batrpc/Batrpc_core__Namespacing/: index.html
batrpc/Batrpc_core__Net_stats/: index.html
batrpc/Batrpc_core__Push_stream/: index.html
batrpc/Batrpc_core__Rpc_conn/: index.html
batrpc/Batrpc_core__Server_for_client/: index.html
batrpc/Batrpc_core__Server_handler/: index.html
batrpc/Batrpc_core__Server_state/: index.html
batrpc/Batrpc_core__Switch/: index.html
batrpc/Batrpc_core__Timer/: index.html
batrpc/Batrpc_server/: index.html
batrpc/Batrpc_server__/: index.html
batrpc/Batrpc_server__Config/: index.html
batrpc/Batrpc_server__For_client/: index.html
batrpc/Batrpc_server__Middleware/: index.html
batrpc/Batrpc_server__Server_handler/: index.html
batrpc/Batrpc_server__State/: index.html
batrpc/Batrpc_unix/: index.html
batrpc/Batrpc_unix__Heap/: index.html
batrpc/Batrpc_unix__Simple_switch/: index.html
batrpc/Batrpc_unix__Simple_timer/: index.html
batrpc/Batrpc_unix__Tcp_client/: index.html
batrpc/Batrpc_unix__Tcp_server/: index.html
batrpc/Batrpc_unix__Time/: index.html
batrpc/Batrpc_unix__Util_/: index.html
batrpc/Batrpc_unix__Util_pipe/: index.html
batrpc/Batrpc_util/: index.html
batrpc/Batrpc_util__Byte_counter/: index.html
batrpc/Batrpc_util__Lock/: index.html
batrpc/Batrpc_util__Rpool/: index.html
batrpc/Batrpc_util__Tracing_/: index.html
batrpc/Batrpc_util__Util_zlib/: index.html
batrpc/_doc-dir/: README.md
containers/CCArray/: index.html
containers/CCArrayLabels/: index.html
containers/CCAtomic/: index.html
containers/CCChar/: index.html
containers/CCFormat/: index.html
containers/CCInt/: index.html
containers/CCInt32/: index.html
containers/CCInt64/: index.html
containers/CCList/: index.html
containers/CCListLabels/: index.html
containers/CCNativeint/: index.html
containers/CCRandom/: index.html
containers/CCSeq/: index.html
containers/CCString/: index.html
containers/CCStringLabels/: index.html
dev/: index.html
examples/trivial/: .ocamlformat-ignore  client.ml  dune  server.ml  trivial.ml  trivial.mli  trivial.proto
imandrakit/: index.html
imandrakit/Imandrakit_zip/: index.html
imandrakit/Imandrakit_zip__Util_gzip/: index.html
imandrakit/Imandrakit_zip__Util_zip/: index.html
imandrakit/Imandrakit_zip__Util_zlib/: index.html
ocaml-compiler-libs/Ocaml_common/: index.html
ocaml-compiler-libs/Ocaml_optcomp/: index.html
ocaml-compiler-libs/Ocaml_shadow/: index.html
ocaml-compiler-libs/Ocaml_toplevel/: index.html
opentelemetry/: index.html
opentelemetry/Opentelemetry_trace/: index.html
ppx_deriving/Ppx_deriving_runtime/: index.html
ppxlib/Ppxlib/: index.html
src/: batrpc.ml  dune  dune.tmp  imandrax_bin_rpc.ml
src/client/: batrpc_client.ml  client.ml  client.mli  common_.ml  config.ml  dune  lifecycle.ml  middleware.ml  state.ml  state.mli
src/core/: .ocamlformat-ignore  basic_client.ml  batrpc_core.ml  buf_pool.ml  buf_pool.mli  byte_counter.ml  client_state.ml  client_state.mli  common_.ml  dune  encoding.ml  error.ml  error_kind.ml  errors.ml  framing.ml  framing.mli  handler.ml  io.ml  lock.mli  meta.ml  meta.mli  meta.proto  middleware.ml  namespacing.ml  net_stats.ml  pull_stream.ml.tmp  push_stream.ml  rpc_conn.ml  rpc_conn.mli  server_for_client.ml  server_handler.ml  server_handlers_.ml  server_state.ml  server_state.mli  switch.ml  tcp_server.ml  tcp_server.mli  timer.ml
src/otel/: batrpc_otel.ml  batrpc_otel.mli  dune
src/server/: batrpc_server.ml  common_.ml  config.ml  dune  for_client.ml  for_client.mli  middleware.ml  server_handler.ml  state.ml  state.mli
src/unix/: dune  simple_switch.ml  simple_switch.mli  simple_timer.ml  simple_timer.mli  tcp_client.ml  tcp_client.mli  tcp_server.ml  tcp_server.mli  util_.ml  util_pipe.ml
src/util/: byte_counter.ml  common_util_.ml  dune  lock.ml  lock.mli  tracing_.dummy.ml  tracing_.mli  tracing_.real.ml
test/: .ocamlformat-ignore  dune  test.expected  test.ml  trivial.ml  trivial.mli  trivial.proto
test/unit/: dune  t_io.expected  t_io.ml
yojson/Yojson/: index.html
zip/Zip/: index.html
(+140 files in other folders)
