
(test
  (name test)
  (flags :standard -w -32-44 -open Imandrakit -open Imandrakit_thread)
  (libraries moonpool containers trace trace-tef batrpc))

(rule
 (targets trivial.ml trivial.mli)
 (deps trivial.proto)
 (alias genproto)
 (mode promote)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --make --ml_out ./ %{deps})))
