(test
 (name test)
 (flags :standard -w -32-44 -open Imandrakit -open Imandrakit_thread)
 (libraries moonpool containers trace trace-tef imandrakit-log batrpc))

(rule
 (targets trivial.ml trivial.mli)
 (deps trivial.proto)
 (alias genproto)
 (mode promote)
 (enabled_if %{env:FORCE_GENPROTO=false})
 (action
  (run
   ocaml-protoc
   --binary
   --pp
   --yojson
   --services
   --make
   --ml_out
   ./
   %{deps})))
