

(executable
  (name client)
  (modules client)
  (flags :standard -w -32-44 -open Trivial)
  (libraries moonpool trivial containers trace trace-tef batrpc))

(executable
  (name server)
  (modules server)
  (flags :standard -w -32-44 -open Trivial)
  (libraries moonpool trivial containers trace trace-tef batrpc))

(library
  (name trivial)
  (flags :standard -w -32-44)
  (modules trivial)
  (libraries moonpool containers trace trace-tef batrpc))

(rule
 (targets trivial.ml trivial.mli)
 (deps trivial.proto)
 (alias lint)
 (mode promote)
 (action
  (run ocaml-protoc --binary --pp --yojson --services --make --ml_out ./ %{deps})))
