(executable
 (name client)
 (modules client)
 (flags
  :standard
  -w
  -32-44
  -open
  Trivial
  -open
  Imandrakit
  -open
  Imandrakit_thread)
 (libraries moonpool trivial containers trace trace-tef batrpc))

(executable
 (name server)
 (modules server)
 (flags
  :standard
  -w
  -32-44
  -open
  Trivial
  -open
  Imandrakit
  -open
  Imandrakit_thread)
 (libraries moonpool trivial containers trace trace-tef batrpc))

(library
 (name trivial)
 (flags :standard -w -32-44)
 (modules trivial)
 (libraries moonpool containers trace trace-tef batrpc))

(rule
 (targets trivial.ml trivial.mli)
 (deps trivial.proto)
 (alias genproto)
 (mode promote)
 (action
  (run
   ocaml-protoc
   --binary
   --pp
   --yojson
   --services
   --make
   --ml_out
   ./
   %{deps})))
