(library
 (name batrpc_core)
 (public_name batrpc.core)
 (synopsis "Binary RPC over streams of bytes for protobuf services.")
 (flags :standard -open Batrpc_util)
 (libraries
  atomic
  moonpool
  batrpc.util
  pbrt
  pbrt_yojson
  hmap
  yojson
  pbrt_services))

(rule
 (alias lint)
 (targets meta.ml meta.mli)
 (deps
  (:file meta.proto))
 (mode promote)
 (action
  (run
   ocaml-protoc
   --ml_out=.
   --services
   --binary
   --yojson
   --pp
   --make
   %{file})))
