(library
 (name batrpc_core)
 (public_name batrpc.core)
 (synopsis "Binary RPC over streams of bytes for protobuf services.")
 (flags
  :standard
  -open
  Imandrakit
  -open
  Imandrakit_thread
  -open
  Imandrakit_zip)
 (preprocess
  (pps ppx_deriving.std))
 (libraries
  atomic
  moonpool
  trace.core
  imandrakit
  imandrakit.metrics
  imandrakit.zip
  imandrakit-thread
  camlzip
  iostream
  pbrt
  pbrt_yojson
  hmap
  yojson
  pbrt_services))

(rule
 (alias genproto)
 (targets meta.ml meta.mli)
 (deps
  (:file meta.proto))
 (mode promote)
 (action
  (run
   ocaml-protoc
   --ml_out=.
   --services
   --binary
   --yojson
   --pp
   --make
   %{file})))
