

(library
 (name batrpc_server)
 (public_name batrpc.server)
 (synopsis "Server side of the RPC.")
 (flags :standard -open Batrpc_core -open Imandrakit -open Imandrakit_thread)
 (private_modules common_)
 (libraries
  trace.core
  imandrakit
  imandrakit.thread
  batrpc.util
  batrpc.core
  iostream
  pbrt
  pbrt_yojson
  hmap
  yojson
  pbrt_services))
